flask-kube/config/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - image: rpsingh21/flask-kube:0.1
          name: demo
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-ser
  labels:
    app: demo-ser
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 8000
      targetPort: 8000
