flask-kube/config/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-ser
  labels:
    app: demo-ser
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 8000
      targetPort: 8000
